Simplified code, thanks to @FlorianKroiss